--- a/Nivel.html
+++ b/Nivel.html
@@ -7,10 +7,10 @@
 
 <body>
   <script type="text/javascript">
-    constant nivel=parseInt(prompt("¿Qué nivel tienes? "));
-    if(nivel>1&&<10) {
+    let nivel = parseInt(prompt("¿Qué nivel tienes? "));
+    if(nivel>1 && nivel<10) {
       alert ("El título que tienes según tu nivel es APREDIZ")
-    } else if (nivel>10&&<20) {
+    } else if (nivel>10&&nivel<20) {
       alert ("El título que tienes según tu nivel es ACRÓBATA")
     } else {
       alert ("¡Felicidades eres grado NINJA!")
