--- a/Hambre.html
+++ b/Hambre.html
@@ -7,14 +7,13 @@
 
 <body>
   <script type="text/javascript">
-    constant resp=parseInt(prompt("¿Hoy te sientes feliz? Escribe 0 si no estas feliz y 1 si lo estas"));
-    if(resp==0)
-  {
-    alert ("Tienes hambre")
-  } else  {
+    let resp=parseInt(prompt("¿Hoy te sientes feliz? Escribe 0 si no estas feliz y 1 si lo estas"));
+    if(resp==0) {
+      alert ("Tienes hambre")
+    } else  {
       alert ("Estas feliz y no tienes hambre")
-  }
-    </script>
+    }
+  </script>
 
  </body>
 </html>
