--- a/Refri.html
+++ b/Refri.html
@@ -8,17 +8,18 @@
 <body>
   <script type="text/javascript">
     let nombre=prompt("¿Cuál es mi nombre completo ? ");
-    if(nombre==Tux) {
+    if(nombre == "Tux") {
       alert ("Respuesta correcta")
-    } else if  {
+      let contraseña=prompt("Contraseña: ");
+      if(contraseña=="Linux") {
+        alert ("Acceso permitido")
+      } else  {
+        alert ("Acceso denegado")
+      }
+    } else  {
       alert ("Respuesta incorrecta")
     }
-    let contraseña=parseInt(prompt("Contraseña: "));
-    if(contraseña==linux) {
-      alert ("Acceso permitido")
-        } else if  {
-      alert ("Acceso denegado")
-        }
+
     </script>
 
  </body>
